# crates_zhejiang

./: README.md  TODO  hello.txt
examples/cpp/: CMakeLists.txt  PINodeUAV.cpp  PIROS.cpp  example_mutex.cpp  example_vel.cpp  example_vel_jstate_mainloop.cpp  land_muav.cpp  main.cpp  main_muav.cpp  muav.cpp  pi_UAV0.xml  pi_UAV1.xml  pi_UAV2.xml  pi_UAV3.xml  pi_UAV4.xml  pi_UAV_joint.xml  pi_UAV_joint2.xml  pi_UAV_joint3.xml  talker.cpp
examples/cpp/pi/: ModelHoldingPattern.cpp  PIController.cpp
src/hal/src/: HAL.cpp
src/hal_quadrotor/include/hal_quadrotor/: Actuation.h  Navigation.h  Quadrotor.h
src/hal_quadrotor/src/: Actuation.cpp  Navigation.cpp  Quadrotor.cpp
src/hal_quadrotor/src/control/: AnglesHeight.cpp  Controller.cpp  Emergency.cpp  Hover.cpp  Idle.cpp  Land.cpp  Takeoff.cpp  Velocity.cpp  VelocityHeight.cpp  Waypoint.cpp
src/hal_quadrotor/srv/: Velocity.srv  VelocityHeight.srv
src/hal_sensor_altimeter/src/: Altimeter.cpp
src/hal_sensor_compass/src/: Compass.cpp
src/hal_sensor_gnss/src/: GNSS.cpp
src/hal_sensor_imu/src/: IMU.cpp
src/hal_sensor_orientation/src/: Orientation.cpp
src/hal_ugv/: CMakeLists.txt  package.xml
src/hal_ugv/include/hal_ugv/: Actuation.h  Navigation.h  UGV.h
src/hal_ugv/msg/: State.msg
src/hal_ugv/src/: Actuation.cpp  Navigation.cpp  UGV.cpp
src/hal_ugv/src/control/: AnglesHeight.cpp  Controller.cpp  Emergency.cpp  Hover.cpp  Idle.cpp  Land.cpp  Takeoff.cpp  Velocity.cpp  VelocityHeight.cpp  VelocityHeight.cpp~  Waypoint.cpp
src/hal_ugv/srv/: GetControl.srv  GetTruth.srv  SetControl.srv  SetEstimate.srv  VelocityHeight.srv
src/platform_asctec/: CMakeLists.txt  package.xml
src/platform_asctec/launch/: hummingbird.launch  pelican.launch
src/platform_asctec/src/: aci_driver.cpp
src/platform_asctec/tools/: 90-ftdi.rules  hosts  startup.sh  startup.txt
src/scenarios_complacs/src/: readme.txt
src/sim/: CMakeLists.txt  package.xml
src/sim/launch/: gui.launch  hw.launch  iarc.launch  sw.launch
src/sim/models/createiarcgreen/: .model.sdf.swp  model.config  model.config~  model.sdf  model.sdf~
src/sim/models/createiarcred/: model.config  model.sdf  model.sdf~
src/sim/models/hummingbird/: model.sdf
src/sim/models/mygroundplane/: model.config  model.sdf  model.sdf~
src/sim/models/obstacle_create/: model.config  model.sdf  model.sdf~
src/sim/models/pelican/: model.config  model.sdf
src/sim/models/windsorpark/: manifest.xml  (+1 more)
(+46 files in other folders)
